# thef-ck

./: Cargo.toml  README.md
src/: main.rs
src/utils/: bf_engine.rs  read_file.rs
tests/: hello.bf  multiplicate.bf
